# xtp_pro_api_python

./: README.md  XTP的API在python下的封装说明文档.docx  boost.python编译说明.docx
etc/example_config/: quote_config.ini
source/Linux/xtpx_api_python_1.0.13/: README.md
source/Linux/xtpx_api_python_1.0.13/xtpxapi/: xgw_x_api_fund_struct.h  xgw_x_api_query_struct.h  xoms_x_api_struct.h  xquote_x_api_data_type.h  xquote_x_api_rebuild_tbt_struct.h  xtpx_api_struct_common.h  xtpx_quote_api.h  xtpx_trader_api.h  xtrade_x_api_data_type.h
source/Linux/xtpx_api_python_1.0.14/vnxtpxquote/: vnxtpxquote.h
source/Linux/xtpx_api_python_1.0.14/xtpxapi/: xtpx_trader_api.h  xtrade_x_api_data_type.h
source/Linux/xtpx_api_python_1.0.15/: README.md
source/Linux/xtpx_api_python_1.0.15/vnxtpxquote/: vnxtpxquote.h
source/Linux/xtpx_api_python_1.0.15/vnxtpxtrader/: vnxtpxtrader.h
source/Linux/xtpx_api_python_1.0.15/xtpxapi/: xtpx_api_data_type.h  xtpx_quote_api.h
source/Linux/xtpx_api_python_1.1.0/: CMakeLists.txt
source/Linux/xtpx_api_python_1.1.0/vnxtpxtrader/: vnxtpxtrader.cpp
source/Linux/xtpx_api_python_1.1.0/xtpxapi/: xoms_x_api_struct.h  xquote_x_api_data_type.h  xquote_x_api_struct.h
source/Windows/xtpx_api_python_1.0.13/vnxtpxquote/: vnxtpxquote.cpp  vnxtpxquote.h
source/Windows/xtpx_api_python_1.0.13/vnxtpxtrader/: vnxtpxtrader.h
source/Windows/xtpx_api_python_1.0.13/xtpxapi/: xgw_x_api_fund_struct.h  xquote_x_api_struct.h  xtpx_api_data_type.h  xtpx_api_struct_common.h  xtpxquoteapi.lib  xtpxtraderapi.lib
source/Windows/xtpx_api_python_1.0.14/vnxtpxquote/: vnxtpxquote.cpp
source/Windows/xtpx_api_python_1.0.14/vnxtpxtrader/: vnxtpxtrader.cpp
source/Windows/xtpx_api_python_1.0.14/xtpxapi/: xgw_x_api_fund_struct.h  xtpx_quote_api.h
source/Windows/xtpx_api_python_1.0.15/vnxtpxquote/: vnxtpxquote.cpp
source/Windows/xtpx_api_python_1.0.15/xtpxapi/: xquote_x_api_data_type.h  xquote_x_api_rebuild_tbt_struct.h  xtpx_trader_api.h  xtpxquoteapi.lib  xtpxtraderapi.lib  xtrade_x_api_data_type.h
source/Windows/xtpx_api_python_1.1.0/vnxtpxquote/: vnxtpxquote.h
source/Windows/xtpx_api_python_1.1.0/xtpxapi/: xgw_x_api_query_struct.h  xtpx_quote_api.h
test/: quotetest.py  tradertest.py
vs2015运行库/: 说明.txt
